    system D-BUS is not running, which happens when running fontconfig-voodoo
    from casper. (LP: #856975)
  * debian/control: "Ubuntu Linux" → "Ubuntu". (LP: #919972)
  * data/pkg_depends: Move mozvoikko to xul-ext-mozvoikko.
  * data/pkg_depends: gedit and sylpheed use libenchant now, move these from
    aspell to hunspell dictionaries.
  * Close window on "Esc". (LP: #614933)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 08 Feb 2012 15:30:58 +0100

language-selector (0.68) precise; urgency=low

  * LanguageSelector/qt/QtLanguageSelector.py: Erroneous for loops
    replaced with simple variable assignments (LP: #926824).

 -- Gunnar Hjalmarsson <ubuntu@gunnar.cc>  Wed, 08 Feb 2012 06:15:31 +0100

language-selector (0.67) precise; urgency=low

  * LanguageSelector/gtk/GtkLanguageSelector.py: Remove call for the
    dropped function verify_no_unexpected_changes() (LP: #927814).

 -- Gunnar Hjalmarsson <ubuntu@gunnar.cc>  Tue, 07 Feb 2012 08:33:33 +0100

language-selector (0.66) precise; urgency=low

  * LanguageSelector/LangCache.py, tests/test_lang_cache.py: Drop some dead
    code.
  * data/pkg_depends: Install poppler-data for all languages. (LP: #893920)
  * tests/test_language_support_pkgs.py: Fix test case for a package which is
    not a pattern, but a full name ("chromium-browser-l10n").
  * language_support_pkgs.py: Also consider the pattern itself a package name.
    Fixes installation of chromium-browser-l10n and poppler-data.
  * tests/test-data/etc/apt/sources.list*: Use precise.
  * tests/test_lang_cache.py: Update the cache before the tests, so that they
    can actually succeed.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 06 Feb 2012 12:33:54 +0100

language-selector (0.65) precise; urgency=low

  [ Colin Watson ]
  * check-language-support: Ignore errors from locale.setlocale.  We might
    well be running from the installer before locales have been properly
    configured (LP: #925330).
  * Clean up lots of pyflakes warnings.