@@ -8,6 +8,9 @@ language-selector (0.69) UNRELEASED; urgency=low
   * data/pkg_depends: gedit and sylpheed use libenchant now, move these from
     aspell to hunspell dictionaries.
   * Close window on "Esc". (LP: #614933)
+  * LanguageSelector/gtk/GtkLanguageSelector.py: Intercept errors from
+    aptdaemon transactions and stop waiting for the transaction to finish on
+    an error. (LP: #863875)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 08 Feb 2012 15:30:58 +0100
 
